ingress/rest-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rest
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: myholdings.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rest-service
                port:
                  number: 8080
